--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="canada">CANADA</string>
     <string name="dpi">DPI</string>
     <string name="local">Localizacao</string>
+    <string name="title_report_activity">Report Activity</string>
 </resources>
